<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kul TODO</string>
    <string name="action_settings">Settings</string>
    <string name="font_family">Tempus Sans ITC</string>
    <string name="addGroupMenu">New group</string>
    <string name="editGroupMenu">Edit</string>
    <string name="deleteGroupMenu">Delete</string>
    <string name="deleteTask">Delete selected tasks</string>
    <string name="selectAllTask">Select All</string>
    <string name="addTask">Add task</string>
    <string name="add">Add</string>
    <string name="markCompleteTask">Complete selected tasks</string>
    <string name="allDay">All Day</string>
    <string name="collaborator">Collaborator</string>
    <string name="group">Group</string>
    <string name="taskTitle">Task Title</string>
    <string name="taskNote">Note</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="syncingGoogleTask">Syncing Google Tasks</string>
    <string name="deauthorizeAccount">Deauthorize this account</string>
    <string name="sortBy">Sort By</string>
    <string name="sortByPriority">Sort By Priority</string>
    <string name="sortByDueDate">Sort By Due Date</string>
    <string name="sortByAdded">Sort by added order</string>
    <string name="sync">Sync</string>
    <string name="skip">Skip</string>
    <string name="tuteSwipeTitle">Swipe to delete or complete this task</string>
    <string name="tuteSwipeDesc">Swipe right to left to delete this task\n
		Swipe left to right to mark this task as completed</string>
    <string name="tuteChangePrioTitle">Tap on flag to change priority</string>
    <string name="tuteChangePrioDesc">Tap on flag to change priority</string>
    <string name="tuteRightClickTitle">Long press to select this</string>
    <string name="tuteRightClickDesc">Long press to select this</string>
    <string name="newTaskReceived">New task has been received</string>
    <string name="authorizeFailTryAgain">Authorizing account fails! 
        Want to try again?</string>
    <string name="syncSkip">Syncing skipped</string>
    <string name="syncWithGoogleQues">Sync with Google?</string>
    <string name="askPermissionToSync">This application can be 
        integrated with Google Task! Do you want to sync?</string>
    <string name="selectGoogleAccount">Select a Google account</string>
    <string name="yeah">Yeah</string>
    <string name="nope">Nope</string>
    <string name="delete">Delete</string>
    <string name="deleteGroupQuestion">Delete this group?</string>
    <string name="enterGroupName">Enter group name here</string>
    <string name="changeGroupName">Change group name </string>
    <string name="change">Change</string>
    <string name="addNewGroup">Add new group: </string>
    <string name="cancel">Cancel</string>
    <string name="deleteQuestion">Delete?</string>
    <string name="deleteTaskQuestion">Delete this task</string>
    <string name="deleteSelectedTaskQuestion">Delete selected tasks?</string>
    <string name="selectAll">Select All</string>
    <string name="deselectAll">Deselect All</string>
    <string name="newTask">New task</string>
    <string name="editTask">Edit task</string>
    <string name="exit">Exit</string>
    <string name="exitNoSaveQuestion">Exit without save?</string>
    <string name="sendSMS">Send SMS</string>
    <string name="sendSMSQuestion">Send SMS to these collaborators?</string>

    <string-array name="priorities">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

</resources>